# doc_ai

./: .gitignore  locustfile.py  populate_vector_store.py  pyproject.toml  requirements.txt
chat/: models.py  rag.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/: chat.html
chat/templates/components/: assistant_message.html  pdf_render.html  user_message.html
core/: settings.py  urls.py
documents/: apps.py  models.py  receivers.py
documents/migrations/: 0001_initial.py  0002_alter_document_id.py
rag/services/: __init__.py  db.py  index_pdf.py  query.py
static/: styles.css
templates/: base.html
