[tool.poetry]
name = "doc-ai"
version = "0.1.0"
description = "Search documents with the help of a chatbot"
authors = ["pedrohwbauer <pedrohwbauer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
django = ">=5.1"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain_chroma = "^0.1.3"
pypdf = "^4.3.1"
chromadb = "^0.5.0"
tiktoken = "^0.7.0"
daphne = "^4.1.2"

[tool.poetry.group.dev.dependencies]
locust = "^2.31.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
